# Copyright (C) 2008-2012 TrinityCore <http://www.trinitycore.org/>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

if (USE_SCRIPTPCH)
  set(Northrend_STAT_PCH_HDR PrecompiledHeaders/NorthrendPCH.h)
  set(Northrend_STAT_PCH_SRC PrecompiledHeaders/NorthrendPCH.cpp)
endif ()

set(Northrend_STAT_SRCS
  ${Northrend_STAT_SRCS}
  ../../game/AI/ScriptedAI/ScriptedEscortAI.cpp
  ../../game/AI/ScriptedAI/ScriptedCreature.cpp
  ../../game/AI/ScriptedAI/ScriptedFollowerAI.cpp
  wintergrasp.cpp
  isle_of_conquest.cpp
  storm_peaks.cpp
  Ulduar/HallsOfLightning/instance_halls_of_lightning.cpp
  Ulduar/HallsOfLightning/boss_bjarngrim.cpp
  Ulduar/HallsOfLightning/halls_of_lightning.h
  Ulduar/HallsOfLightning/boss_ionar.cpp
  Ulduar/HallsOfLightning/boss_volkhan.cpp
  Ulduar/HallsOfLightning/boss_loken.cpp
  Ulduar/Ulduar/boss_general_vezax.cpp
  Ulduar/Ulduar/ulduar_teleporter.cpp
  Ulduar/Ulduar/boss_thorim.cpp
  Ulduar/Ulduar/boss_ignis.cpp
  Ulduar/Ulduar/boss_algalon_the_observer.cpp
  Ulduar/Ulduar/instance_ulduar.cpp
  Ulduar/Ulduar/boss_auriaya.cpp
  Ulduar/Ulduar/boss_yoggsaron.cpp
  Ulduar/Ulduar/boss_hodir.cpp
  Ulduar/Ulduar/boss_assembly_of_iron.cpp
  Ulduar/Ulduar/boss_flame_leviathan.cpp
  Ulduar/Ulduar/boss_xt002.cpp
  Ulduar/Ulduar/boss_mimiron.cpp
  Ulduar/Ulduar/ulduar.h
  Ulduar/Ulduar/boss_freya.cpp
  Ulduar/Ulduar/boss_razorscale.cpp
  Ulduar/Ulduar/boss_kologarn.cpp
  Ulduar/HallsOfStone/boss_krystallus.cpp
  Ulduar/HallsOfStone/halls_of_stone.h
  Ulduar/HallsOfStone/instance_halls_of_stone.cpp
  Ulduar/HallsOfStone/boss_maiden_of_grief.cpp
  Ulduar/HallsOfStone/boss_sjonnir.cpp
  Ulduar/HallsOfStone/halls_of_stone.cpp
  ChamberOfAspects/ObsidianSanctum/instance_obsidian_sanctum.cpp
  ChamberOfAspects/ObsidianSanctum/obsidian_sanctum.h
  ChamberOfAspects/ObsidianSanctum/boss_sartharion.cpp
  ChamberOfAspects/RubySanctum/instance_ruby_sanctum.cpp
  ChamberOfAspects/RubySanctum/ruby_sanctum.cpp
  ChamberOfAspects/RubySanctum/ruby_sanctum.h
  ChamberOfAspects/RubySanctum/boss_baltharus_the_warborn.cpp
  ChamberOfAspects/RubySanctum/boss_saviana_ragefire.cpp
  ChamberOfAspects/RubySanctum/boss_general_zarithrian.cpp
  ChamberOfAspects/RubySanctum/boss_halion.cpp
  FrozenHalls/HallsOfReflection/halls_of_reflection.h
  FrozenHalls/HallsOfReflection/boss_falric.cpp
  FrozenHalls/HallsOfReflection/instance_halls_of_reflection.cpp
  FrozenHalls/HallsOfReflection/halls_of_reflection.cpp
  FrozenHalls/HallsOfReflection/boss_marwyn.cpp
  FrozenHalls/PitOfSaron/boss_forgemaster_garfrost.cpp
  FrozenHalls/PitOfSaron/boss_krickandick.cpp
  FrozenHalls/PitOfSaron/pit_of_saron.cpp
  FrozenHalls/PitOfSaron/boss_scourgelord_tyrannus.cpp
  FrozenHalls/PitOfSaron/pit_of_saron.h
  FrozenHalls/PitOfSaron/instance_pit_of_saron.cpp
  FrozenHalls/ForgeOfSouls/forge_of_souls.cpp
  FrozenHalls/ForgeOfSouls/boss_bronjahm.cpp
  FrozenHalls/ForgeOfSouls/instance_forge_of_souls.cpp
  FrozenHalls/ForgeOfSouls/boss_devourer_of_souls.cpp
  FrozenHalls/ForgeOfSouls/forge_of_souls.h
  Nexus/EyeOfEternity/boss_malygos.cpp
  Nexus/EyeOfEternity/instance_eye_of_eternity.cpp
  Nexus/EyeOfEternity/eye_of_eternity.h
  Nexus/Oculus/boss_eregos.cpp
  Nexus/Oculus/boss_drakos.cpp
  Nexus/Oculus/oculus.h
  Nexus/Oculus/boss_varos.cpp
  Nexus/Oculus/boss_urom.cpp
  Nexus/Oculus/oculus.cpp
  Nexus/Oculus/instance_oculus.cpp
  Nexus/Nexus/commander_kolurg.cpp
  Nexus/Nexus/commander_stoutbeard.cpp
  Nexus/Nexus/boss_ormorok.cpp
  Nexus/Nexus/boss_magus_telestra.cpp
  Nexus/Nexus/instance_nexus.cpp
  Nexus/Nexus/boss_keristrasza.cpp
  Nexus/Nexus/boss_anomalus.cpp
  Nexus/Nexus/nexus.h
  CrusadersColiseum/TrialOfTheCrusader/boss_anubarak_trial.cpp
  CrusadersColiseum/TrialOfTheCrusader/boss_faction_champions.cpp
  CrusadersColiseum/TrialOfTheCrusader/boss_lord_jaraxxus.cpp
  CrusadersColiseum/TrialOfTheCrusader/trial_of_the_crusader.h
  CrusadersColiseum/TrialOfTheCrusader/boss_northrend_beasts.cpp
  CrusadersColiseum/TrialOfTheCrusader/trial_of_the_crusader.cpp
  CrusadersColiseum/TrialOfTheCrusader/boss_twin_valkyr.cpp
  CrusadersColiseum/TrialOfTheCrusader/instance_trial_of_the_crusader.cpp
  CrusadersColiseum/TrialOfTheChampion/trial_of_the_champion.h
  CrusadersColiseum/TrialOfTheChampion/trial_of_the_champion.cpp
  CrusadersColiseum/TrialOfTheChampion/boss_grand_champions.cpp
  CrusadersColiseum/TrialOfTheChampion/boss_black_knight.cpp
  CrusadersColiseum/TrialOfTheChampion/instance_trial_of_the_champion.cpp
  CrusadersColiseum/TrialOfTheChampion/boss_argent_challenge.cpp
  Naxxramas/boss_loatheb.cpp
  Naxxramas/boss_anubrekhan.cpp
  Naxxramas/boss_maexxna.cpp
  Naxxramas/boss_patchwerk.cpp
  Naxxramas/boss_gothik.cpp
  Naxxramas/boss_faerlina.cpp
  Naxxramas/boss_gluth.cpp
  Naxxramas/boss_four_horsemen.cpp
  Naxxramas/naxxramas.h
  Naxxramas/boss_kelthuzad.cpp
  Naxxramas/boss_heigan.cpp
  Naxxramas/boss_thaddius.cpp
  Naxxramas/boss_razuvious.cpp
  Naxxramas/boss_sapphiron.cpp
  Naxxramas/instance_naxxramas.cpp
  Naxxramas/boss_grobbulus.cpp
  Naxxramas/boss_noth.cpp
  crystalsong_forest.cpp
  VaultOfArchavon/boss_archavon.cpp
  VaultOfArchavon/boss_koralon.cpp
  VaultOfArchavon/vault_of_archavon.h
  VaultOfArchavon/instance_vault_of_archavon.cpp
  VaultOfArchavon/boss_emalon.cpp
  VaultOfArchavon/boss_toravon.cpp
  sholazar_basin.cpp
  UtgardeKeep/UtgardePinnacle/boss_palehoof.cpp
  UtgardeKeep/UtgardePinnacle/boss_svala.cpp
  UtgardeKeep/UtgardePinnacle/instance_pinnacle.cpp
  UtgardeKeep/UtgardePinnacle/boss_ymiron.cpp
  UtgardeKeep/UtgardePinnacle/boss_skadi.cpp
  UtgardeKeep/UtgardePinnacle/utgarde_pinnacle.h
  UtgardeKeep/UtgardeKeep/boss_ingvar_the_plunderer.cpp
  UtgardeKeep/UtgardeKeep/boss_skarvald_dalronn.cpp
  UtgardeKeep/UtgardeKeep/utgarde_keep.h
  UtgardeKeep/UtgardeKeep/instance_utgarde_keep.cpp
  UtgardeKeep/UtgardeKeep/boss_keleseth.cpp
  UtgardeKeep/UtgardeKeep/utgarde_keep.cpp
  dragonblight.cpp
  grizzly_hills.cpp
  AzjolNerub/AzjolNerub/azjol_nerub.h
  AzjolNerub/AzjolNerub/instance_azjol_nerub.cpp
  AzjolNerub/AzjolNerub/boss_krikthir_the_gatewatcher.cpp
  AzjolNerub/AzjolNerub/boss_hadronox.cpp
  AzjolNerub/AzjolNerub/boss_anubarak.cpp
  AzjolNerub/Ahnkahet/boss_herald_volazj.cpp
  AzjolNerub/Ahnkahet/boss_prince_taldaram.cpp
  AzjolNerub/Ahnkahet/instance_ahnkahet.cpp
  AzjolNerub/Ahnkahet/boss_jedoga_shadowseeker.cpp
  AzjolNerub/Ahnkahet/boss_elder_nadox.cpp
  AzjolNerub/Ahnkahet/boss_amanitar.cpp
  AzjolNerub/Ahnkahet/ahnkahet.h
  VioletHold/boss_zuramat.cpp
  VioletHold/instance_violet_hold.cpp
  VioletHold/boss_lavanthor.cpp
  VioletHold/boss_cyanigosa.cpp
  VioletHold/violet_hold.h
  VioletHold/boss_ichoron.cpp
  VioletHold/boss_moragg.cpp
  VioletHold/boss_xevozz.cpp
  VioletHold/boss_erekem.cpp
  VioletHold/violet_hold.cpp
  IcecrownCitadel/instance_icecrown_citadel.cpp
  IcecrownCitadel/icecrown_citadel.cpp
  IcecrownCitadel/icecrown_citadel.h
  IcecrownCitadel/icecrown_citadel_teleport.cpp
  IcecrownCitadel/instance_icecrown_citadel.cpp
  IcecrownCitadel/icecrown_citadel.cpp
  IcecrownCitadel/icecrown_citadel.h
  IcecrownCitadel/icecrown_citadel_teleport.cpp
  IcecrownCitadel/boss_lord_marrowgar.cpp
  IcecrownCitadel/boss_lady_deathwhisper.cpp
  IcecrownCitadel/boss_gunship_battle.cpp
  IcecrownCitadel/boss_deathbringer_saurfang.cpp
  IcecrownCitadel/boss_festergut.cpp
  IcecrownCitadel/boss_rotface.cpp
  IcecrownCitadel/boss_professor_putricide.cpp
  IcecrownCitadel/boss_blood_prince_council.cpp
  IcecrownCitadel/boss_blood_queen_lana_thel.cpp
  IcecrownCitadel/boss_valithria_dreamwalker.cpp
  IcecrownCitadel/boss_sindragosa.cpp
  IcecrownCitadel/boss_the_lich_king.cpp

  zuldrak.cpp
  icecrown.cpp
  Gundrak/boss_slad_ran.cpp
  Gundrak/instance_gundrak.cpp
  Gundrak/boss_drakkari_colossus.cpp
  Gundrak/gundrak.h
  Gundrak/boss_gal_darah.cpp
  Gundrak/boss_moorabi.cpp
  Gundrak/boss_eck.cpp
  borean_tundra.cpp
  howling_fjord.cpp
  dalaran.cpp
  DraktharonKeep/boss_trollgore.cpp
  DraktharonKeep/instance_drak_tharon_keep.cpp
  DraktharonKeep/boss_novos.cpp
  DraktharonKeep/drak_tharon_keep.h
  DraktharonKeep/boss_tharon_ja.cpp
  DraktharonKeep/boss_king_dred.cpp
)

include_directories(
  ${CMAKE_BINARY_DIR}
  ${CMAKE_SOURCE_DIR}/dep
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation/Detour
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation/Recast
  ${CMAKE_SOURCE_DIR}/dep/g3dlite/include
  ${CMAKE_SOURCE_DIR}/dep/SFMT
  ${CMAKE_SOURCE_DIR}/dep/zlib
  ${CMAKE_SOURCE_DIR}/src/server/shared
  ${CMAKE_SOURCE_DIR}/src/server/shared/Configuration
  ${CMAKE_SOURCE_DIR}/src/server/shared/Cryptography
  ${CMAKE_SOURCE_DIR}/src/server/shared/Database
  ${CMAKE_SOURCE_DIR}/src/server/shared/DataStores
  ${CMAKE_SOURCE_DIR}/src/server/shared/Debugging
  ${CMAKE_SOURCE_DIR}/src/server/shared/Dynamic/LinkedReference
  ${CMAKE_SOURCE_DIR}/src/server/shared/Dynamic
  ${CMAKE_SOURCE_DIR}/src/server/shared/Logging
  ${CMAKE_SOURCE_DIR}/src/server/shared/Packets
  ${CMAKE_SOURCE_DIR}/src/server/shared/Threading
  ${CMAKE_SOURCE_DIR}/src/server/shared/Utilities
  ${CMAKE_SOURCE_DIR}/src/server/collision
  ${CMAKE_SOURCE_DIR}/src/server/collision/Management
  ${CMAKE_SOURCE_DIR}/src/server/collision/Models
  ${CMAKE_SOURCE_DIR}/src/server/shared
  ${CMAKE_SOURCE_DIR}/src/server/shared/Database
  ${CMAKE_SOURCE_DIR}/src/server/game/Accounts
  ${CMAKE_SOURCE_DIR}/src/server/game/Anticheat
  ${CMAKE_SOURCE_DIR}/src/server/game/Achievements
  ${CMAKE_SOURCE_DIR}/src/server/game/Addons
  ${CMAKE_SOURCE_DIR}/src/server/game/AI
  ${CMAKE_SOURCE_DIR}/src/server/game/AI/CoreAI
  ${CMAKE_SOURCE_DIR}/src/server/game/AI/ScriptedAI
  ${CMAKE_SOURCE_DIR}/src/server/game/AI/SmartScripts
  ${CMAKE_SOURCE_DIR}/src/server/game/AuctionHouse
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlefield
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlefield/Zones
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlegrounds
  ${CMAKE_SOURCE_DIR}/src/server/game/Battlegrounds/Zones
  ${CMAKE_SOURCE_DIR}/src/server/game/BattlePet
  ${CMAKE_SOURCE_DIR}/src/server/game/Calendar
  ${CMAKE_SOURCE_DIR}/src/server/game/Challenge
  ${CMAKE_SOURCE_DIR}/src/server/game/Chat
  ${CMAKE_SOURCE_DIR}/src/server/game/Chat/Channels
  ${CMAKE_SOURCE_DIR}/src/server/game/Conditions
  ${CMAKE_SOURCE_DIR}/src/server/shared/Configuration
  ${CMAKE_SOURCE_DIR}/src/server/game/Combat
  ${CMAKE_SOURCE_DIR}/src/server/game/DataStores
  ${CMAKE_SOURCE_DIR}/src/server/game/DungeonFinding
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/AreaTrigger
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Corpse
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Creature
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/DynamicObject
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Item
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Item/Container
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/GameObject
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Object
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Object/Updates
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Pet
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Player
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Transport
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Unit
  ${CMAKE_SOURCE_DIR}/src/server/game/Entities/Vehicle
  ${CMAKE_SOURCE_DIR}/src/server/game/Events
  ${CMAKE_SOURCE_DIR}/src/server/game/Globals
  ${CMAKE_SOURCE_DIR}/src/server/game/Grids
  ${CMAKE_SOURCE_DIR}/src/server/game/Grids/Cells
  ${CMAKE_SOURCE_DIR}/src/server/game/Grids/Notifiers
  ${CMAKE_SOURCE_DIR}/src/server/game/Groups
  ${CMAKE_SOURCE_DIR}/src/server/game/Guilds
  ${CMAKE_SOURCE_DIR}/src/server/game/Handlers
  ${CMAKE_SOURCE_DIR}/src/server/game/Instances
  ${CMAKE_SOURCE_DIR}/src/server/game/LookingForGroup
  ${CMAKE_SOURCE_DIR}/src/server/game/Loot
  ${CMAKE_SOURCE_DIR}/src/server/game/Mails
  ${CMAKE_SOURCE_DIR}/src/server/game/Miscellaneous
  ${CMAKE_SOURCE_DIR}/src/server/game/Maps
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement/MovementGenerators
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement/Spline
  ${CMAKE_SOURCE_DIR}/src/server/game/Movement/Waypoints
  ${CMAKE_SOURCE_DIR}/src/server/game/Opcodes
  ${CMAKE_SOURCE_DIR}/src/server/game/OutdoorPvP
  ${CMAKE_SOURCE_DIR}/src/server/game/Pools
  ${CMAKE_SOURCE_DIR}/src/server/game/PrecompiledHeaders
  ${CMAKE_SOURCE_DIR}/src/server/game/Quests
  ${CMAKE_SOURCE_DIR}/src/server/game/Reputation
  ${CMAKE_SOURCE_DIR}/src/server/game/Scenarios  
  ${CMAKE_SOURCE_DIR}/src/server/game/Scripting
  ${CMAKE_SOURCE_DIR}/src/server/game/Server
  ${CMAKE_SOURCE_DIR}/src/server/game/Server/Protocol
  ${CMAKE_SOURCE_DIR}/src/server/game/Skills
  ${CMAKE_SOURCE_DIR}/src/server/game/Spells
  ${CMAKE_SOURCE_DIR}/src/server/game/Spells/Auras
  ${CMAKE_SOURCE_DIR}/src/server/game/Texts
  ${CMAKE_SOURCE_DIR}/src/server/game/Tickets
  ${CMAKE_SOURCE_DIR}/src/server/game/Tools
  ${CMAKE_SOURCE_DIR}/src/server/game/Warden
  ${CMAKE_SOURCE_DIR}/src/server/game/Warden/Modules
  ${CMAKE_SOURCE_DIR}/src/server/game/Weather
  ${CMAKE_SOURCE_DIR}/src/server/game/World
  ${CMAKE_CURRENT_SOURCE_DIR}/PrecompiledHeaders
  ${ACE_INCLUDE_DIR}
  ${MYSQL_INCLUDE_DIR}
)

add_library(Northrend STATIC
  ${Northrend_STAT_SRCS}
  ${Northrend_STAT_PCH_SRC}
)

message("  -> Prepared: Northrend")

# Generate precompiled header
if (USE_SCRIPTPCH)
  add_cxx_pch(Northrend ${Northrend_STAT_PCH_HDR} ${Northrend_STAT_PCH_SRC})
endif()
